reverting yesterdays file structure change

--- a/Couples/Couple3.html
+++ b/Couples/Couple3.html
@@ -17,9 +17,9 @@
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="/Assets/Partials/Services.html">Services</a></li>
-          <li><a href="/Assets/Partials/About.html">About</a></li>
-          <li><a href="/Assets/Partials/Contact.html">Contact</a></li>
+          <li><a href="/Partials/Services.html">Services</a></li>
+          <li><a href="/Partials/About.html">About</a></li>
+          <li><a href="/Partials/Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
@@ -56,14 +56,14 @@
       </video>
     </section>
     <section class="intro">
-      <h2>Alex & Sam</h2>
+      <h2>Chris & Pat</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi tenetur
         fuga consectetur enim repellendus nam commodi fugiat quibusdam velit
         voluptatum alias maiores illo corrupti perspiciatis reiciendis vitae
         cupiditate, minima sint.
       </p>
-      <section class="cards" id="couple2-images"></section>
+      <section class="cards" id="couple3-images"></section>
     </section>
     <div id="hr-with-text">See More</div>
     <!--* JavaScript Implementation -->
@@ -86,9 +86,9 @@
           <h4>QUICK LINKS</h4>
           <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/Assets/Partials/Services.html">Services</a></li>
-            <li><a href="/Assets/Partials/About.html">About</a></li>
-            <li><a href="/Assets/Partials/Contact.html">Contact</a></li>
+            <li><a href="/Partials/Services.html">Services</a></li>
+            <li><a href="/Partials/About.html">About</a></li>
+            <li><a href="/Partials/Contact.html">Contact</a></li>
             <li><a id="book-btn">Book Online</a></li>
           </ul>
         </div>
