--- a/Couples/Couple4.html
+++ b/Couples/Couple4.html
@@ -17,9 +17,9 @@
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="/Assets/Partials/Services.html">Services</a></li>
-          <li><a href="/Assets/Partials/About.html">About</a></li>
-          <li><a href="/Assets/Partials/Contact.html">Contact</a></li>
+          <li><a href="/Partials/Services.html">Services</a></li>
+          <li><a href="/Partials/About.html">About</a></li>
+          <li><a href="/Partials/Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
@@ -86,9 +86,9 @@
           <h4>QUICK LINKS</h4>
           <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/Assets/Partials/Services.html">Services</a></li>
-            <li><a href="/Assets/Partials/About.html">About</a></li>
-            <li><a href="/Assets/Partials/Contact.html">Contact</a></li>
+            <li><a href="/Partials/Services.html">Services</a></li>
+            <li><a href="/Partials/About.html">About</a></li>
+            <li><a href="/Partials/Contact.html">Contact</a></li>
             <li><a id="book-btn">Book Online</a></li>
           </ul>
         </div>
