--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="/Assets/Partials/Services.html">Services</a></li>
-          <li><a href="/Assets/Partials/About.html">About</a></li>
-          <li><a href="/Assets/Partials/Contact.html">Contact</a></li>
+          <li><a href="Partials/Services.html">Services</a></li>
+          <li><a href="Partials/About.html">About</a></li>
+          <li><a href="Partials/Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
@@ -78,18 +78,18 @@
         <div class="card">
           <img src="Assets/Images/Image.png" />
           <h3>About Us</h3>
-          <a href="/Assets/Partials/About.html">See More</a>
+          <a href="Partials/About.html">See More</a>
         </div>
 
         <div class="card">
           <img src="Assets/Images/Image.png" />
           <h3>Contact Us</h3>
-          <a href="/Assets/Partials/Contact.html">See More</a>
+          <a href="Partials/Contact.html">See More</a>
         </div>
         <div class="card">
           <img src="Assets/Images/Image.png" />
           <h3>Prices & Packages</h3>
-          <a href="/Assets/Partials/Services.html">See More</a>
+          <a href="Partials/Services.html">See More</a>
         </div>
       </section>
     </section>
@@ -115,9 +115,9 @@
           <h4>QUICK LINKS</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="/Assets/Partials/Services.html">Services</a></li>
-            <li><a href="/Assets/Partials/About.html">About</a></li>
-            <li><a href="/Assets/Partials/Contact.html">Contact</a></li>
+            <li><a href="Partials/Services.html">Services</a></li>
+            <li><a href="Partials/About.html">About</a></li>
+            <li><a href="Partials/Contact.html">Contact</a></li>
             <li><a id="book-btn">Book Online</a></li>
           </ul>
         </div>
