--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="card">
           <img src="Assets/Images/Image.png" />
           <h3>About Us</h3>
-          <a href="Partials/About.html">See More</a>
+          <a href="https://bahaa204.github.io/Photography-Website/Partials/About.html">See More</a>
         </div>
 
         <div class="card">
@@ -151,3 +151,4 @@
     </footer>
   </body>
 </html>
+
