Upading href Links

--- a/Couples/Couple2.html
+++ b/Couples/Couple2.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shafik Rawass | Photographer</title>
-    <link rel="stylesheet" href="/Assets/CSS/styles.css" />
+    <link rel="stylesheet" href="/Photography-Website/Assets/CSS/styles.css" />
     <!-- * Website Icon -->
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/Image.ico" />
+    <link rel="icon" type="image/x-icon" href="/Photography-Website/Assets/Images/Image.ico" />
   </head>
   <body>
     <header class="navbar">
       <h1 class="logo">
-        <a href="/index.html">
-          <img src="/Assets/Images/Image.png" id="logo" />
+        <a href="/Photography-Website/index.html">
+          <img src="/Photography-Website/Assets/Images/Image.png" id="logo" />
         </a>
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="/Partials/Services.html">Services</a></li>
-          <li><a href="/Partials/About.html">About</a></li>
-          <li><a href="/Partials/Contact.html">Contact</a></li>
+          <li><a href="/Photography-Website/Partials/Services.html">Services</a></li>
+          <li><a href="/Photography-Website/Partials/About.html">About</a></li>
+          <li><a href="/Photography-Website/Partials/Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
@@ -30,7 +30,7 @@
         <p>Whatsapp:</p>
         <a href="https://wa.me/96171619141" target="_blank">
           <div>
-            <img src="/Assets/Images/whatsapp.png" />
+            <img src="/Photography-Website/Assets/Images/whatsapp.png" />
             Chat on WhatsApp
           </div>
         </a>
@@ -42,7 +42,7 @@
           target="_blank"
         >
           <div>
-            <img src="/Assets/Images/Instagram_icon.png" />
+            <img src="/Photography-Website/Assets/Images/Instagram_icon.png" />
             Visit on Instagram
           </div>
         </a>
@@ -51,19 +51,19 @@
     </div>
     <section class="hero">
       <video autoplay muted loop playsinline>
-        <source src="/Assets/Images/Placeholder-Video.mp4" type="video/mp4" />
+        <source src="/Photography-Website/Assets/Images/Placeholder-Video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </section>
     <section class="intro">
-      <h2>Alex & Sam</h2>
+      <h2>John & Jane</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi tenetur
         fuga consectetur enim repellendus nam commodi fugiat quibusdam velit
         voluptatum alias maiores illo corrupti perspiciatis reiciendis vitae
         cupiditate, minima sint.
       </p>
-      <section class="cards" id="couple2-images"></section>
+      <section class="cards" id="couple1-images"></section>
     </section>
     <div id="hr-with-text">See More</div>
     <!--* JavaScript Implementation -->
@@ -85,10 +85,10 @@
         <div class="footer-column">
           <h4>QUICK LINKS</h4>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/Partials/Services.html">Services</a></li>
-            <li><a href="/Partials/About.html">About</a></li>
-            <li><a href="/Partials/Contact.html">Contact</a></li>
+            <li><a href="/Photography-Website/index.html">Home</a></li>
+            <li><a href="/Photography-Website/Partials/Services.html">Services</a></li>
+            <li><a href="/Photography-Website/Partials/About.html">About</a></li>
+            <li><a href="/Photography-Website/Partials/Contact.html">Contact</a></li>
             <li><a id="book-btn">Book Online</a></li>
           </ul>
         </div>
@@ -121,7 +121,7 @@
       </div>
     </footer>
 
-    <script src="/Assets/index.js"></script>
-    <script src="/Assets/couples.js"></script>
+    <script src="/Photography-Website/Assets/index.js"></script>
+    <script src="/Photography-Website/Assets/couples.js"></script>
   </body>
 </html>
