--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shafik Rawass | Photographer</title>
-    <link rel="stylesheet" href="Assets/CSS/styles.css" />
+    <link rel="stylesheet" href="/Photography-Website/Assets/CSS/styles.css" />
     <!-- * Website Icon -->
-    <link rel="icon" type="image/x-icon" href="Assets/Images/Image.ico" />
+    <link rel="icon" type="image/x-icon" href="/Photography-Website/Assets/Images/Image.ico" />
   </head>
   <body>
     <header class="navbar">
       <h1 class="logo">
-        <a href="/index.html">
-          <img src="Assets/Images/Image.png" id="logo" />
+        <a href="/Photography-Website/index.html">
+          <img src="/Photography-Website/Assets/Images/Image.png" id="logo" />
         </a>
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="Partials/Services.html">Services</a></li>
-          <li><a href="Partials/About.html">About</a></li>
-          <li><a href="Partials/Contact.html">Contact</a></li>
+          <li><a href="/Photography-Website/Partials/Services.html">Services</a></li>
+          <li><a href="/Photography-Website/Partials/About.html">About</a></li>
+          <li><a href="/Photography-Website/Partials/Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
@@ -30,7 +30,7 @@
         <p>Whatsapp - Lebanon:</p>
         <a href="https://wa.me/96171619141" target="_blank">
           <div>
-            <img src="Assets/Images/whatsapp.png" />
+            <img src="/Photography-Website/Assets/Images/whatsapp.png" />
             Chat on WhatsApp
           </div>
         </a>
@@ -39,7 +39,7 @@
         <p>Whatsapp - Qatar:</p>
         <a href="https://wa.me/97451005843" target="_blank">
           <div>
-            <img src="Assets/Images/whatsapp.png" />
+            <img src="/Photography-Website/Assets/Images/whatsapp.png" />
             Chat on WhatsApp
           </div>
         </a>
@@ -51,7 +51,7 @@
           target="_blank"
         >
           <div>
-            <img src="Assets/Images/Instagram_icon.png" />
+            <img src="/Photography-Website/Assets/Images/Instagram_icon.png" />
             Visit on Instagram
           </div>
         </a>
@@ -60,7 +60,7 @@
     </div>
     <section class="hero">
       <video autoplay muted loop playsinline>
-        <source src="Assets/Images/Placeholder-Video.mp4" type="video/mp4" />
+        <source src="/Photography-Website/Assets/Images/Placeholder-Video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </section>
@@ -76,27 +76,27 @@
       >
       <section class="intro-cards">
         <div class="card">
-          <img src="Assets/Images/Image.png" />
+          <img src="/Photography-Website/Assets/Images/Image.png" />
           <h3>About Us</h3>
-          <a href="https://bahaa204.github.io/Photography-Website/Partials/About.html">See More</a>
+          <a href="/Photography-Website/Partials/About.html">See More</a>
         </div>
 
         <div class="card">
-          <img src="Assets/Images/Image.png" />
+          <img src="/Photography-Website/Assets/Images/Image.png" />
           <h3>Contact Us</h3>
-          <a href="Partials/Contact.html">See More</a>
+          <a href="/Photography-Website/Partials/Contact.html">See More</a>
         </div>
         <div class="card">
-          <img src="Assets/Images/Image.png" />
+          <img src="/Photography-Website/Assets/Images/Image.png" />
           <h3>Prices & Packages</h3>
-          <a href="Partials/Services.html">See More</a>
+          <a href="/Photography-Website/Partials/Services.html">See More</a>
         </div>
       </section>
     </section>
     <div id="hr-with-text"><b>Discover Some of My Work</b></div>
     <!--* JavaScript Implementation -->
     <section class="cards" id="cards"></section>\
-    <script src="/Assets/index.js"></script>
+    <script src="/Photography-Website/Assets/index.js"></script>
     
     <!--* Footer Section -->
     <footer class="site-footer">
@@ -115,9 +115,9 @@
           <h4>QUICK LINKS</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Partials/Services.html">Services</a></li>
-            <li><a href="Partials/About.html">About</a></li>
-            <li><a href="Partials/Contact.html">Contact</a></li>
+            <li><a href="/Photography-Website/Partials/Services.html">Services</a></li>
+            <li><a href="/Photography-Website/Partials/About.html">About</a></li>
+            <li><a href="/Photography-Website/Partials/Contact.html">Contact</a></li>
             <li><a id="book-btn">Book Online</a></li>
           </ul>
         </div>
